--- a/index.html
+++ b/index.html
@@ -181,15 +181,15 @@ SSSssshhhhh!! The code starts below -->
                                              <h4>Experience Skill</h4>
                                         </div>
                                         <div class=progress-content>
-                                             <div class="rating-bar bar-left"><label> Angular 7</label><!--<span
-                                                       class="pull-right rating-count">60%</span> -->
+                                             <div class="rating-bar bar-left"><label> Python </label><!--<span
+                                                       class="pull-right rating-count">80%</span> -->
                                                   <div class=skill-progress>
                                                        <div class=progress>
                                                             <div class="progress-bar bar1" aria-valuemax=100
                                                                  aria-valuemin=0 aria-valuenow=60 role=progressbar>
                                                             </div>
                                                        </div>
-                                                  </div><label>NodeJS/Express.js</label><!--<span
+                                                  </div><label>My Sql</label><!--<span
                                                        class="pull-right rating-count">65%</span> -->
                                                   <div class=skill-progress>
                                                        <div class=progress>
@@ -197,8 +197,8 @@ SSSssshhhhh!! The code starts below -->
                                                                  aria-valuemin=0 aria-valuenow=65 role=progressbar>
                                                             </div>
                                                        </div>
-                                                  </div> <label>Git Version Control</label><!--<span
-                                                       class="pull-right rating-count">68%</span> -->
+                                                  </div> <label>Git hub</label><!--<span
+                                                       class="pull-right rating-count">50%</span> -->
                                                   <div class=skill-progress>
                                                        <div class=progress>
                                                             <div class="progress-bar bar5" aria-valuemax=100
@@ -212,14 +212,7 @@ SSSssshhhhh!! The code starts below -->
                                                             <div class="progress-bar bar1" aria-valuemax=100
                                                                  aria-valuemin=0 aria-valuenow=68 role=progressbar>
                                                             </div>
-                                                       </div>
-                                                  </div><label>MySql/MsSql</label><!--<span
-                                                       class="pull-right rating-count">62%</span> -->
-                                                  <div class=skill-progress>
-                                                       <div class=progress>
-                                                            <div class="progress-bar bar5" aria-valuemax=100
-                                                                 aria-valuemin=0 aria-valuenow=62 role=progressbar>
-                                                            </div>
+                                                       
                                                        </div>
                                                   </div><label>Html5/CSS3</label><!--<span
                                                        class="pull-right rating-count">87%</span> -->
