--- a/index.html
+++ b/index.html
@@ -141,14 +141,7 @@
                                         <div class=progress-content>
                                              <div class="rating-bar bar-left"><label> Python</label><!--<span
                                                        class="pull-right rating-count">60%</span> -->
-                                                  <div class=skill-progress>
-                                                       <div class=progress>
-                                                            <div class="progress-bar bar1" aria-valuemax=100
-                                                                 aria-valuemin=0 aria-valuenow=60 role=progressbar>
-                                                            </div>
-                                                       </div>
-                                                  </div><label>PHP</label><!--<span
-                                                       class="pull-right rating-count">65%</span> -->
+                                                  
                                                   <div class=skill-progress>
                                                        <div class=progress>
                                                             <div class="progress-bar bar5" aria-valuemax=100
@@ -189,7 +182,7 @@
                                                             </div>
                                                        </div>
                                                   </div> -->
-                                                  <label>Photoshop</label><!--<span
+                                                  <label>Streamlit</label><!--<span
                                                        class="pull-right rating-count">80%</span> -->
                                                   <div class=skill-progress>
                                                        <div class=progress>
