--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta content="text/html; charset=shift_jis" http-equiv=Content-Type>
      <meta content="IE=edge" http-equiv=X-UA-Compatible>
      <meta content=#2d3038 name=theme-color>
-     <title>Madhura Gurav | Full Stack developer 🇮🇳 </title>
+     <title>Madhura Gurav |AIML Engineer </title>
      <?xml version="1.0" encoding="utf-8"?>
      <meta content="width=device-width,initial-scale=1" name=viewport>
      <meta content="Madhura Gurav" name=author>
@@ -103,11 +103,11 @@
                               <div class=col-sm-8>
                                    <div class=about-info>
                                         <p>
-                                             A Full-stack software developer dedicated to providing advanced web solutions using <b>ReactJs/Angular, ReactNative, MongoDB/PostgreSQL & Node.js </b> technologies. <br>
+                                             A AIML Engineer dedicated to providing advanced  solutions using different technologies. <br>
                                               I am proficient in developing scalable web APIs and designing custom user interfaces with the latest technologies, have a strong working knowledge of the full stack life cycle, from concept to implementation. 
                                               <br>
                                               I am highly capable of responding to pressure situations and I always aim to bring innovative solutions to the table.
-                                              <br> I share my knowledge on web design and development in my blog.
+                                              <
                                    </div>
                                    <address>
                                         <p><span>Nick Name: </span>Madhura<p><span>Email:</span> madhuragurav95@gmail.com
